# FinalProject/in-retrospect-api/in-retrospect-api/src/retrospective-templates/models/retrospective-template.dto.ts
@@ -1,4 +1,5 @@
 import { IsString, IsNotEmpty, MinLength, MaxLength, IsNumber} from 'class-validator';
+import { RetrospectiveTemplateCol } from '../retrospective-template.interface';
 
 export class CreateRetrospectiveTemplateDTO {
   @IsNotEmpty()
@@ -6,12 +7,14 @@ export class CreateRetrospectiveTemplateDTO {
   @MaxLength(50)
   @MinLength(3)
   public name: string;
+
+  public columns: Array<RetrospectiveTemplateCol>;
 }
 
 export class UpdateRetrospectiveTemplateDTO {
   @IsString()
   public name: string;
 
-  @IsNumber()
-  public position: number;
+  public columns: Array<RetrospectiveTemplateCol>;
 }
+
