# FinalProject/in-retrospect-api/in-retrospect-api/src/retrospectives/models/retrospective.dto.ts
@@ -7,9 +7,6 @@ export class CreateRetrospectiveDTO {
   @MinLength(3)
   public name: string;
 
-  @IsNumber()
-  public position: number;
-
   @IsString()
   @IsNotEmpty()
   public templateID: string;
